--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "TripViewer",
   "description": "View and export trip data collected by Automatic",
-  "version": "0.0.6",
+  "version": "0.1.0",
+  "private": false,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "engines": {
     "node": "0.10.x",
     "npm":  "1.4.x"
   },
   "dependencies": {
-      "express": "= 3.4.x"
-    , "request": "= 2.34.x"
-    , "underscore": "= 1.6.x"
-    , "jade": "1.2.x"
-    , "async": "0.2.x"
-    , "express-csv": "0.6.x"
-    , "moment-timezone": "0.0.3"
-    , "nconf": "0.6.x"
+    "express": "~3.4.8",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "jade": "~1.3.0",
+    "request": "= 2.34.x",
+    "underscore": "= 1.6.x",
+    "async": "0.2.x",
+    "express-csv": "0.6.x",
+    "moment-timezone": "0.0.3",
+    "nconf": "0.6.x"
   }
 }
