--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
   "name": "TripViewer",
   "description": "View and export trip data collected by Automatic",
-  "version": "0.1.0",
-  "private": false,
-  "scripts": {
-    "start": "node ./bin/www"
+  "version": "0.2.0",
+  "author": {
+    "name": "Brendan Nee",
+    "email": "brendan@automatic.com"
+  },
+  "dependencies": {
+    "async": "~0.9.0",
+    "body-parser": "~1.5.2",
+    "debug": "~1.0.4",
+    "express": "~4.7.4",
+    "express-csv": "~0.6.0",
+    "express-session": "~1.7.2",
+    "jade": "~1.5.0",
+    "moment-timezone": "~0.2.1",
+    "morgan": "~1.2.2",
+    "nconf": "~0.6.9",
+    "request": "~2.39.0",
+    "static-favicon": "~1.0.2",
+    "underscore": "~1.6.0"
   },
   "engines": {
     "node": "0.10.x",
-    "npm":  "1.4.x"
+    "npm": "1.4.x"
   },
-  "dependencies": {
-    "express": "~3.4.8",
-    "static-favicon": "~1.0.2",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "request": "= 2.34.x",
-    "underscore": "= 1.6.x",
-    "async": "0.7.x",
-    "express-csv": "0.6.x",
-    "moment-timezone": "0.0.6",
-    "nconf": "0.6.x"
+  "homepage": "https://automatic.com/developer",
+  "license": "MIT",
+  "private": false,
+  "repository": "https://github.com/automatic/tripviewer",
+  "scripts": {
+    "start": "node ./bin/www"
   }
 }
