--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "morgan": "~1.3.1",
     "nconf": "~0.6.9",
     "request": "~2.42.0",
-    "static-favicon": "~1.0.2",
+    "serve-favicon": "~2.1.3",
     "underscore": "~1.7.0"
   },
   "engines": {
