--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TripViewer",
-  "description": "View and export trip data collected by Automatic",
-  "version": "0.2.0",
+  "description": "Automatic REST API Demo Application",
+  "version": "0.3.0",
   "author": {
     "name": "Brendan Nee",
     "email": "brendan@automatic.com"
@@ -13,6 +13,9 @@
     "express": "~4.9.5",
     "express-csv": "~0.6.0",
     "express-session": "~1.8.2",
+    "gulp": "^3.8.8",
+    "gulp-bower": "~0.0.6",
+    "gulp-express": "~0.1.0",
     "jade": "~1.7.0",
     "moment-timezone": "~0.2.2",
     "morgan": "~1.3.2",
@@ -30,6 +33,7 @@
   "private": false,
   "repository": "https://github.com/automatic/tripviewer",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "node node_modules/.bin/gulp default"
   }
 }
