--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TripViewer",
   "description": "Automatic REST API Demo Application",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": {
     "name": "Brendan Nee",
     "email": "brendan@automatic.com"
@@ -28,7 +28,7 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  "homepage": "https://automatic.com/developer",
+  "homepage": "https://developer.automatic.com",
   "license": "MIT",
   "private": false,
   "repository": "https://github.com/automatic/tripviewer",
