--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
   "name": "TripViewer",
-  "description": "Automatic REST API Demo Application",
   "version": "0.4.0",
+  "description": "Automatic REST API Demo Application",
   "author": {
     "name": "Brendan Nee",
-    "email": "brendan@automatic.com"
+    "email": "brendan@automatic.com",
+    "url": "http://www.automatic.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/automatic/tripviewer.git"
+  },
+  "bugs": {
+    "url": "http://github.com/automatic/tripviewer/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/MIT"
+    }
+  ],
   "dependencies": {
     "async": "~0.9.0",
     "body-parser": "~1.10.0",
     "debug": "~2.1.0",
-    "express": "~4.10.4",
+    "express": "~4.10.5",
     "express-csv": "~0.6.0",
     "express-session": "~1.9.3",
     "gulp": "^3.8.10",
     "gulp-bower": "~0.0.7",
-    "gulp-express": "~0.1.1",
+    "gulp-express": "~0.1.2",
     "jade": "~1.8.1",
     "moment-timezone": "~0.2.5",
     "morgan": "~1.5.0",
     "nconf": "~0.7.1",
-    "request": "~2.49.0",
+    "request": "~2.51.0",
     "serve-favicon": "~2.1.7",
     "underscore": "~1.7.0"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
+    "node": "0.10.x"
   },
-  "homepage": "https://developer.automatic.com",
-  "license": "MIT",
-  "private": false,
-  "repository": "https://github.com/automatic/tripviewer",
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "node node_modules/.bin/gulp bower"
