--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express-session": "~1.9.3",
     "gulp": "^3.8.10",
     "gulp-bower": "~0.0.7",
-    "gulp-express": "~0.1.2",
+    "gulp-jshint": "~1.9.0",
+    "gulp-load-plugins": "~0.8.0",
+    "gulp-nodemon": "~1.0.4",
     "jade": "~1.8.1",
     "moment-timezone": "~0.2.5",
     "morgan": "~1.5.0",
