--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
   ],
   "dependencies": {
     "async": "~0.9.0",
-    "body-parser": "~1.10.0",
-    "debug": "~2.1.0",
-    "express": "~4.10.6",
+    "body-parser": "~1.10.1",
+    "debug": "~2.1.1",
+    "express": "~4.10.7",
     "express-csv": "~0.6.0",
-    "express-session": "~1.9.3",
-    "gulp": "^3.8.10",
+    "express-session": "~1.10.0",
+    "gulp": "~3.8.10",
     "gulp-bower": "~0.0.7",
     "gulp-jshint": "~1.9.0",
     "gulp-load-plugins": "~0.8.0",
-    "gulp-nodemon": "~1.0.4",
-    "jade": "~1.8.1",
+    "gulp-nodemon": "~1.0.5",
+    "jade": "~1.8.2",
     "moment-timezone": "~0.2.5",
-    "morgan": "~1.5.0",
+    "morgan": "~1.5.1",
     "nconf": "~0.7.1",
     "request": "~2.51.0",
-    "serve-favicon": "~2.1.7",
+    "serve-favicon": "~2.2.0",
     "simple-oauth2": "~0.2.x",
     "underscore": "~1.7.0"
   },
