--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "async": "~0.9.0",
+    "bower": "~1.3.12",
     "body-parser": "~1.10.1",
     "debug": "~2.1.1",
     "express": "~4.10.7",
@@ -46,6 +47,6 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "node node_modules/.bin/gulp bower"
+    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install"
   }
 }
