--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "moment-timezone": "~0.3.0",
     "morgan": "~1.5.1",
     "nconf": "~0.7.1",
+    "passport": "^0.2.1",
+    "passport-automatic": "git://github.com/Automatic/passport-automatic",
     "request": "~2.53.0",
     "serve-favicon": "~2.2.0",
     "simple-oauth2": "~0.2.x",
