Upgrade mapbox library

--- a/config-sample.json
+++ b/config-sample.json
@@ -1,5 +1,6 @@
 {
   "AUTOMATIC_CLIENT_ID": "YOUR AUTOMATIC CLIENT ID",
   "AUTOMATIC_CLIENT_SECRET": "YOUR AUTOMATIC CLIENT SECRET",
+  "MAPBOX_ACCESS_TOKEN": "YOUR MAPBOX ACCESS TOKEN",
   "SESSION_SECRET": "keyboard cat"
 }
