--- a/package.json
+++ b/package.json
@@ -22,25 +22,27 @@
   ],
   "dependencies": {
     "async": "~0.9.0",
-    "body-parser": "~1.12.0",
-    "bower": "~1.3.12",
-    "debug": "~2.1.1",
-    "express": "~4.12.0",
+    "body-parser": "~1.12.2",
+    "bower": "~1.4.1",
+    "debug": "~2.1.3",
+    "express": "~4.12.3",
     "express-csv": "~0.6.0",
-    "express-session": "~1.10.3",
+    "express-session": "~1.11.1",
     "gulp": "~3.8.11",
-    "gulp-jshint": "~1.9.2",
-    "gulp-load-plugins": "~0.8.0",
-    "gulp-nodemon": "~1.0.5",
+    "gulp-load-plugins": "~0.10.0",
     "jade": "~1.9.2",
-    "moment-timezone": "~0.3.0",
-    "morgan": "~1.5.1",
+    "moment-timezone": "~0.3.1",
+    "morgan": "~1.5.2",
     "nconf": "~0.7.1",
     "passport": "^0.2.1",
     "passport-automatic": "~1.2.0",
-    "request": "~2.53.0",
+    "request": "~2.55.0",
     "serve-favicon": "~2.2.0",
-    "underscore": "~1.8.2"
+    "underscore": "~1.8.3"
+  },
+  "devDependencies": {
+    "gulp-nodemon": "~2.0.2",
+    "gulp-jshint": "~1.10.0"
   },
   "engines": {
     "node": "0.12.x"
