--- a/package.json
+++ b/package.json
@@ -14,12 +14,7 @@
   "bugs": {
     "url": "http://github.com/automatic/tripviewer/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/MIT"
-    }
-  ],
+  "license": "Apache-2.0",
   "dependencies": {
     "async": "~0.9.0",
     "body-parser": "~1.12.2",
