--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "async": "~1.0.0",
+    "async": "~1.2.0",
     "body-parser": "~1.12.4",
     "bower": "~1.4.1",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "express-csv": "~0.6.0",
     "express-session": "~1.11.2",
-    "gulp": "~3.8.11",
+    "gulp": "~3.9.0",
     "gulp-load-plugins": "~0.10.0",
     "jade": "~1.10.0",
-    "moment-timezone": "~0.3.1",
+    "moment-timezone": "~0.4.0",
     "morgan": "~1.5.3",
     "nconf": "~0.7.1",
-    "passport": "^0.2.2",
+    "passport": "~0.2.2",
     "passport-automatic": "~1.2.1",
-    "request": "~2.56.0",
+    "request": "~2.57.0",
     "serve-favicon": "~2.2.1",
     "underscore": "~1.8.3"
   },
